[tool.poetry]
name = "advent-of-code-solutions"
version = "1.0.0"
description = "My solutions to the Advent of Code challenges."
authors = ["John Whiting <john@jwhiting.dev>"]
readme = "README.md"
packages = [{include = "advent_of_code_solutions"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
